--- a/public/Hello.html
+++ b/public/Hello.html
@@ -5,11 +5,8 @@
 -->
 <head>
   <link rel="stylesheet" href="Hello.css">
-  <title>Hello (Pyjamas Auto-Generated HTML file)</title>
+  <title>Passion Hussain hero</title>
 </head>
 <body style="background-color:white">
-  <pre>
-  some text demonstrating static HTML here.
-  </pre>
 </body>
 </html>
